fixed footer sizing, but not vertical text alignment :/

--- a/style.css
+++ b/style.css
@@ -37,8 +37,9 @@ h3 {
     display: inline-block;
 }
 footer span {
-    display: fixed;
-    min-width: 30%;
+    display: inline-block;
+    min-width: 33%;
+    margin-top: 12px;
     background-size: cover;
 }
 .donate {
@@ -50,11 +51,19 @@ footer span {
 .location {
     background-image: url("images/location.png");
 }
+footer span div {
+    width: 100%;
+    height: 272px;
+    background-color: rgba(135, 76, 213, 0.349);
+    text-align: center;
+    vertical-align: center;
+}
 footer span a {
     z-index: 1;
     font-family: "Oswald";
     color: #ffffff;
     font-size: 32px;
-    background-color: rgba(135, 76, 213, 0.349);
-    text-align: center;
+    width: 100%;
+    height: 100%;
+    vertical-align: center;
 }
